frontend/app/globals.css
@import "tailwindcss";

@theme {
  --color-primary: #020617;
  --color-primary-light: #E6E6E8;
  --color-brand-hover: #A4A5A7;
  --color-secondary: #FDF9E8;

  --font-serif: var(--font-instrument-serif);
  --font-sans: var(--font-geist-sans);

  /* Blinking Cursor */
  --animate-blink: blink 1s step-end infinite;

  @keyframes blink {
    50% {
      opacity: 0;
    }
  }
}

/* Tools Marquee */
@keyframes marquee {
  0% { transform: translateX(0%); }
  100% { transform: translateX(-50%); }
}

.animate-marquee {
  display: flex;
  width: max-content;
  animation: marquee 25s linear infinite;
}

.animate-marquee:hover {
  animation-play-state: paused;
}

/* Scrollbar */
::-webkit-scrollbar {
  width: 8px;
}

::-webkit-scrollbar-track {
  background: var(--color-primary); 
}

::-webkit-scrollbar-thumb {
  background: var(--color-secondary); 
  border-radius: 12px;
  border-color: var(--color-primary);
}

::-webkit-scrollbar-thumb:hover {
  background: var(--color-brand-hover);
}

